attempt to fix menus invisible on iOS devices

--- a/src/styles/common/Nav.module.css
+++ b/src/styles/common/Nav.module.css
@@ -149,8 +149,10 @@ h5 {
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 120%;
+  min-height: 100%;
   background-color: rgba(233, 68, 23, 0.85);
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 999;
   animation: slideOut 0.3s forwards;
@@ -647,5 +649,13 @@ h5 {
 
   .menuIcon {
     font-size: 3rem;
+  }
+}
+
+/* iOS */
+@supports (-webkit-touch-callout: none) {
+  .menuWrapper {
+    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
   }
 }
