--- a/src/styles/common/Search.module.css
+++ b/src/styles/common/Search.module.css
@@ -12,7 +12,8 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 120vh;
+  height: 120%;
+  min-height: 100%;
   background-color: rgba(233, 68, 23, 0.85);
   z-index: 999;
   animation: slideOut 0.3s forwards;
@@ -20,8 +21,9 @@
   flex-direction: column;
   padding: 2rem;
   transform: translateX(100%);
-  overflow: hidden;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  border: 2px solid blue;
 }
 
 .menuWrapper.menuClosing {
@@ -339,5 +341,13 @@
 
   .noMatch p {
     font-size: 1.75rem;
+  }
+}
+
+/* iOS */
+@supports (-webkit-touch-callout: none) {
+  .menuWrapper {
+    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
   }
 }
